# barcode-localization

./: README.md
BC/: CMakeLists.txt  barcode_localization.cpp  barcode_localization.h  main.cpp
LCEBDFTB_modify/: CMakeLists.txt  barcode_localization.cpp
LCEBDFTB_v2/: README.md  barcode_localization.h  main.cpp
LCEBDFTB_v2/include/LCEBDFTB/: barcode_localization.h
cvtest/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  cvtest.cbp  main.cpp  printf  printfff.cpp
hello/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  cvtest.cpp  example.cpp  hello  hello.cbp  helo.cbp  hwfn  hwfn.cpp  hwfn.out  main  main.cpp  test  test.cbp  test.cpp
opencv_test/: CMakeCache.txt  CMakeLists.txt  Makefile  changechannel.cpp  cmake_install.cmake  displayimage.cpp  houghcircle.cpp
